--- a/front/moduli/statistica/base/basetest.html
+++ b/front/moduli/statistica/base/basetest.html
@@ -18,6 +18,10 @@
 				background-attachment: fixed;
 				background-size: cover;
 			}
+			#punteggio {
+				text-align: center;
+				font-size: larger;
+			}
 		</style>
 		<script type="text/javascript" src="basetest.js"></script>
 	</head>
@@ -99,112 +103,189 @@
 		</nav>
 		<br /><br /><br />
 		<div class="container bg-blur text-monospace">
-			<nav>
-				<div class="nav nav-tabs" id="nav-tab" role="tablist">
-					<a
-						class="nav-item nav-link active"
-						id="nav-primo-tab"
-						data-toggle="tab"
-						href="#nav-primo"
-						role="tab"
-						aria-controls="nav-primo"
-						aria-selected="true"
-						>Primo</a
+			<div class="row">
+				<div class="col-sm-8 h-auto p-3" ">
+				<nav>
+					<div class="nav nav-tabs" id="nav-tab" role="tablist">
+						<a
+							class="nav-item nav-link active"
+							id="nav-primo-tab"
+							data-toggle="tab"
+							href="#nav-primo"
+							role="tab"
+							aria-controls="nav-primo"
+							aria-selected="true"
+							>Primo</a
+						>
+						<a
+							class="nav-item nav-link"
+							id="nav-secondo-tab"
+							data-toggle="tab"
+							href="#nav-secondo"
+							role="tab"
+							aria-controls="nav-secondo"
+							aria-selected="false"
+							>Secondo</a
+						>
+						<a
+							class="nav-item nav-link"
+							id="nav-terzo-tab"
+							data-toggle="tab"
+							href="#nav-terzo"
+							role="tab"
+							aria-controls="nav-terzo"
+							aria-selected="false"
+							>Terzo</a
+						>
+					</div>
+				</nav>
+				<div style="margin: 4px; height: 20em;" class="tab-content" id="nav-tabContent ">
+					<div
+						class="tab-pane fade show active bg-more-blur"
+						id="nav-primo"
+						role="tabpanel"
+						aria-labelledby="nav-primo-tab"
 					>
-					<a
-						class="nav-item nav-link"
-						id="nav-secondo-tab"
-						data-toggle="tab"
-						href="#nav-secondo"
-						role="tab"
-						aria-controls="nav-secondo"
-						aria-selected="false"
-						>Secondo</a
+						Cosa si intende per scienza?
+						<br />
+						<br />
+						<div class="list-group">
+							<button
+								type="button"
+								id="11"
+								class="list-group-item list-group-item-action"
+							>
+								Un sistema di conoscenze ottenute attraverso un'attività di ricerca
+								prevalentemente organizzata con procedimenti metodici e rigorosi,
+							</button>
+							<button
+								type="button"
+								id="12"
+								class="list-group-item list-group-item-action"
+							>
+								Lo studio dei vulcani
+							</button>
+							<button
+								type="button"
+								id="13"
+								class="list-group-item list-group-item-action"
+							>
+								Lo studio delle particelle elementari
+							</button>
+							<button
+								type="button"
+								id="14"
+								class="list-group-item list-group-item-action"
+							>
+								Conoscenze basate su ipotesi
+							</button>
+						</div>
+					</div>
+					<div
+						class="tab-pane fade bg-more-blur"
+						id="nav-secondo"
+						role="tabpanel"
+						aria-labelledby="nav-secondo-tab"
 					>
-					<a
-						class="nav-item nav-link"
-						id="nav-terzo-tab"
-						data-toggle="tab"
-						href="#nav-terzo"
-						role="tab"
-						aria-controls="nav-terzo"
-						aria-selected="false"
-						>Terzo</a
+						Come si ottiene la media?
+						<br />
+						<br />
+						<div class="list-group">
+							<button
+								type="button"
+								id="21"
+								class="list-group-item list-group-item-action"
+							>
+								Somma dei numeri
+							</button>
+							<button
+								type="button"
+								id="22"
+								class="list-group-item list-group-item-action"
+							>
+								è la quantità di numeri sommati
+							</button>
+							<button
+								type="button"
+								id="23"
+								class="list-group-item list-group-item-action"
+							>
+								sottraendo e sommando i numeri in modo alternato
+							</button>
+							<button
+								type="button"
+								id="24"
+								class="list-group-item list-group-item-action"
+							>
+								Sommando tutti i numeri e dividendo per la quantità di essi
+							</button>
+						</div>
+					</div>
+					<div
+						class="tab-pane fade bg-more-blur"
+						id="nav-terzo"
+						role="tabpanel"
+						aria-labelledby="nav-terzo-tab"
 					>
-				</div>
-			</nav>
-			<div class="tab-content" id="nav-tabContent">
-				<div
-					class="tab-pane fade show active bg-more-blur"
-					id="nav-primo"
-					role="tabpanel"
-					aria-labelledby="nav-primo-tab"
-				>
-					Cosa si intende per scienza?
-					<br />
-					<div class="list-group">
-						<button type="button" class="list-group-item list-group-item-action">
-							Un sistema di conoscenze ottenute attraverso un'attività di ricerca
-							prevalentemente organizzata con procedimenti metodici e rigorosi,
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							Lo studio dei vulcani
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							Lo studio delle particelle elementari
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							Conoscenze basate su ipotesi
-						</button>
+						Quale è la media tra 5 e 15?
+						<br />
+						<br />
+						<div class="list-group">
+							<button
+								type="button"
+								id="31"
+								class="list-group-item list-group-item-action"
+							>
+								12
+							</button>
+							<button
+								type="button"
+								id="32"
+								class="list-group-item list-group-item-action"
+							>
+								20
+							</button>
+							<button
+								type="button"
+								id="33"
+								class="list-group-item list-group-item-action"
+							>
+								10
+							</button>
+							<button
+								type="button"
+								id="34"
+								class="list-group-item list-group-item-action"
+							>
+								5
+							</button>
+						</div>
 					</div>
 				</div>
-				<div
-					class="tab-pane fade bg-more-blur"
-					id="nav-secondo"
-					role="tabpanel"
-					aria-labelledby="nav-secondo-tab"
-				>
-					Come si ottiene la media?
-					<br />
-					<div class="list-group">
-						<button type="button" class="list-group-item list-group-item-action">
-							Somma dei numeri
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							è la quantità di numeri sommati
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							sottraendo e sommando i numeri in modo alternato
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							Sommando tutti i numeri e dividendo per la quantità di essi
-						</button>
-					</div>
-				</div>
-				<div
-					class="tab-pane fade bg-more-blur"
-					id="nav-terzo"
-					role="tabpanel"
-					aria-labelledby="nav-terzo-tab"
-				>
-					Quale è la media tra 5 e 15?
-					<br />
-					<br />
-					<div class="list-group">
-						<button type="button" class="list-group-item list-group-item-action">
-							12
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							20
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							10
-						</button>
-						<button type="button" class="list-group-item list-group-item-action">
-							5
-						</button>
-					</div>
-				</div>
+			</div>
+			<div class="col-sm-3 btn-group-vertical">
+				Buon Lavoro! <br />
+				<br />
+				<button class="btn btn-primary" type="submit" onclick="invia()">
+					Invia
+				</button>
+				<button class="btn btn-secondary" type="reset" onclick="reset()">
+					Reset
+				</button>
+			</div>
+		</div>
+		<div class="h-100 row">
+			<div
+				id="punteggio"
+				class="col-sm-12 text-center align-center"
+				style="
+					padding: 20px;
+					border-radius: 30px;
+					background: rgba(30, 147, 243, 0.5);
+					transition-duration: 1s;
+				"
+			>
+				Premi su invio per ottenere il punteggio
 			</div>
 		</div>
 	</body>
