--- a/front/moduli/statistica/intro/intro.html
+++ b/front/moduli/statistica/intro/intro.html
@@ -116,8 +116,8 @@
 				</div>
 				cioè di non completa conoscenza di esso o parte di esso.
 				<br />
-				La storia della statistica parte da tempi antichi, già gli egizi censivano il
-				popolo!
+				La storia della statistica parte da tempi antichi, già i le prime dinastie egizie
+				censivano il popolo!
 				<br />Inizirono addirittura a rilevare i beni ,tenevano liste delle famiglie dei
 				soldati,dei dipendenti statali e delle merci <br />
 				Nel popolo di istraele i censimenti iniziarono dopo la loro fuga dall'egitto
@@ -134,8 +134,23 @@
 				</div>
 				ma la maggior parte delle popolazioni nel passato censivano i propri cittadini ,
 				proprio come avviene adesso!
-				<br /><br /><br />
-				<h2>MORE....</h2>
+				<br />
+				Il censimento in italia avviene ogni 10 anni ed è gestito
+				<a
+					class="bg-light more-info"
+					id="istat"
+					href="https://it.wikipedia.org/wiki/Istituto_nazionale_di_statistica"
+				>
+					dall'istat
+				</a>
+				<div class="bg-light" style="display: none;" id="sistat">
+					L'Istituto nazionale di statistica (Istat o ISTAT) è un ente pubblico di ricerca
+					italiano che si occupa dei censimenti generali della popolazione, dei servizi e
+					dell'industria, e dell'agricoltura, di indagini campionarie sulle famiglie e di
+					indagini economiche generali a livello nazionale.
+				</div>
+				<br /><br />
+				<h2></h2>
 				<br /><br /><br /><br />
 				<a href="introtest.html">
 					<button class="btn btn-primary">Portami al test!!!</button>
