--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -146,34 +146,73 @@
 					<div class="col-8 bg-more-blur rounded-lg">
 						<div class="tab-content" id="nav-tabContent">
 							<div class="tab-pane fade show active" id="primad" role="tabpanel">
-								Quale popolazione ha per prima iniziato a censire i beni?
-								<br />
-								<input type="radio" class="col-1" name="intro1" id="ebrei" />Ebrei
-								<input type="radio" class="col-1" name="intro1" id="egizi" />Egizi
-								<input
-									type="radio"
-									class="col-1"
-									name="intro1"
-									id="romani"
-								/>Romani<input
-									type="radio"
-									class="col-1"
-									name="intro1"
-									id="babilonesi"
-								/>babilonesi
+								<div style="padding: 1em;">
+									Quale popolazione ha per prima iniziato a censire i beni?
+									<br />
+									<input
+										type="radio"
+										class="col-1"
+										name="intro1"
+										value="ebrei"
+									/>Ebrei
+									<input
+										type="radio"
+										class="col-1"
+										name="intro1"
+										value="egizi"
+									/>Egizi
+									<input
+										type="radio"
+										class="col-1"
+										name="intro1"
+										value="romani"
+									/>Romani<input
+										type="radio"
+										class="col-1"
+										name="intro1"
+										value="babilonesi"
+									/>babilonesi
+								</div>
 							</div>
 							<div class="tab-pane fade" id="secondad" role="tabpanel">
-								<span
-									>Come si chiama il libro che racconta il censimento degli
-									ebrei?</span
-								>
-								<input type="text" name="libro" id="libro" />
+								<div style="padding: 2em;">
+									Come si chiama il libro che racconta il censimento degli ebrei?
+
+									<input type="text" name="libro" id="libro" />
+								</div>
 							</div>
 							<div class="tab-pane fade" id="terzad" role="tabpanel">
-								<a align="center" href="#">TODO!!</a>
+								<div class="text-xl-center" style="padding: 1em;">
+									Cosa è l'istat?
+									<br />
+									<label class="radiobutton"
+										>Organizza le lotterie
+										<input type="radio" class="" name="istat" value="1" />
+									</label>
+									<label class="radiobutton"
+										>publico italiano per l'economia e la finanza
+										<input type="radio" class="" name="istat" value="2" />
+									</label>
+									<label class="radiobutton"
+										>Istituto nazionale di statistica
+										<input type="radio" class="" name="istat" value="3" />
+									</label>
+
+									<label class="radiobutton"
+										>Servizi Segreti
+										<input type="radio" class="" name="istat" value="4" />
+									</label>
+								</div>
 							</div>
 							<div class="tab-pane fade" id="quartad" role="tabpanel">
-								<a href="http://www.google.it"> Link a sito esterno </a>
+								<div class="" style="padding: 2em;">
+									<div>
+										ogni quanti anni viene censita la popolazione italiana?
+									</div>
+									<div>
+										<input type="number" name="anni" id="anni" />
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
