--- a/front/moduli/programmazione/IDLE.html
+++ b/front/moduli/programmazione/IDLE.html
@@ -6,11 +6,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Introduzione alla statistica</title>
-		<link rel="shortcut icon" href="../../../favicon.ico" />
-		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
-		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
-		<script src="../../../jQuery/jquery.min.js"></script>
-		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
+		<link rel="shortcut icon" href="../../favicon.ico" />
+		<link rel="stylesheet" href="../../assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="../../assets/css/home-made.css" />
+		<script src="../../assets/js/jquery.min.js"></script>
+		<script src="../../assets/js/bootstrap.js"></script>
+		<script src="../../assets/"></script>
 		<style>
 			body {
 				background-image: url("../art.jpg");
@@ -101,4 +102,18 @@
 		</nav>
 		<br /><br /><br />
 
-<iframe src="https://trinket.io/embed/python/4cc717027d" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+		<div class="container-fluid">
+			<div class="flex-sm-column">
+				<iframe
+					src="https://trinket.io/embed/python/4cc717027d"
+					width="100%"
+					height="356"
+					frameborder="0"
+					marginwidth="0"
+					marginheight="0"
+					allowfullscreen
+				></iframe>
+			</div>
+		</div>
+	</body>
+</html>
