--- a/front/moduli/qi/quiz_qi/domanda0.html
+++ b/front/moduli/qi/quiz_qi/domanda0.html
@@ -8,7 +8,7 @@
 			></strong
 		>
 	</div>
-	<div class="domanda1" style="padding-left: 60px;">
+	<div class="domanda1" style="padding-left: 60px;" ">
 		<input
 			id="domanda_2"
 			class="qmn_quiz_radio"
