--- a/front/moduli/qi/quiz_qi/crocetteAjax.html
+++ b/front/moduli/qi/quiz_qi/crocetteAjax.html
@@ -16,30 +16,117 @@
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	</head>
 	<body>
-		<div class="container-md" id="ajaxSpace">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
+			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
+			uso a invece che span per rendere il contenuto interattivo  -->
+			<a class="navbar-brand" href="#">Edu@home</a>
+			<!-- ancora come in questo caso -->
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
+                mentre sotto abbiamo una parte collapsable ovvero 
+                che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a id="home" class="nav-link" href="../../../learnMap/learnMap.html"
+							>Home <span class="sr-only">(current)</span></a
+						>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a
+							class="nav-link dropdown-toggle"
+							href="#"
+							id="navbarDropdown"
+							role="button"
+							data-toggle="dropdown"
+							aria-haspopup="true"
+							aria-expanded="false"
+						>
+							Settaggi Vari
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a
+							id="abdis"
+							class="nav-link disabled"
+							href="http://www.google.it"
+							tabindex="-1"
+							aria-disabled="true"
+							>Abilitabile traguardo (test)</a
+						>
+					</li>
+				</ul>
+				<!-- //inutile il search per ora  
+				<form class="form-inline my-2 my-lg-0">
+					<input
+						class="form-control mr-sm-2"
+						type="search"
+						placeholder="Matematica"
+						aria-label="Cerca"
+					/>
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+						Cerca
+					</button>
+                </form>
+                -->
+			</div>
+		</nav>
+		<br /><br /><br />
+		<div class="container-md text-monospace">
+			<div id="ajaxSpace">
+				<div>
+					<button class="btn btn-primary" id="next" name="domanda0">Iniziamo</button>
+				</div>
+			</div>
 			<div>
-				<button class="btn btn-primary" id="next" name="domanda0">Iniziamo</button>
+				<p id="valutazione">prova</p>
 			</div>
 		</div>
 		<script>
+			arrayrisposte = [];
 			$(document).ready(function () {
 				$("#next").click(function () {
-					alert("ciao");
 					caricaDocumento(this);
-					test(this);
 				});
 			});
 
 			function afterajax() {
-				$("qmn_quiz_radio").click(function () {
+				$(".qmn_quiz_radio").click(function () {
 					caricaDocumento(this);
 				});
 			}
 
 			function caricaDocumento(e) {
+				if (e.id != "next") {
+					arrayrisposte.push(e.id);
+				}
+				if (e.getAttribute("name") == "domanda3") {
+					invia();
+					return;
+				}
 				var httpRequest = new XMLHttpRequest();
 				httpRequest.onreadystatechange = gestisciResponse;
-				httpRequest.open("GET", e.target.getAttribute("name") + ".html", true);
+				httpRequest.open("GET", e.getAttribute("name") + ".html", true);
 				httpRequest.send();
 			}
 			function gestisciResponse(e) {
@@ -48,7 +135,12 @@
 				}
 				afterajax();
 			}
+
+			function invia() {
+				$.post("quiz.php", { arrayrisposte }, function (data, status) {
+					$("#valutazione").text("Hai risposto correttamente a " + data + " su x");
+				});
+			}
 		</script>
-		<script></script>
 	</body>
 </html>
