--- a/front/paginaRegistrazione/registrazione.html
+++ b/front/paginaRegistrazione/registrazione.html
@@ -16,45 +16,47 @@
 			.mycheckbox {
 				background: whitesmoke;
 				border-radius: 15px;
-			};
+			}
 		</style>
 		<script type="text/javascript" lang="javascript" src="reg.js"></script>
 	</head>
 	<body>
-		<fieldset>
-			<form
-				action="validateRegistrazione.php"
-				class="form-signin"
-				method="POST"
-				onsubmit="return CHECK();"
-			>
-				<label class="" for="nick">Nickname:</label>
-				<input type="text" name="nick" value="" id="nick" />
+		<div>
+			<fieldset>
+				<form
+					action="validateRegistrazione.php"
+					class="form-signin"
+					method="POST"
+					onsubmit="return CHECK();"
+				>
+					<label class="" for="nick">Nickname:</label>
+					<input type="text" name="nick" value="" id="nick" />
 
-				<label class="" for="nome">Nome:</label>
-				<input type="text" name="nome" value="" id="name" />
+					<label class="" for="nome">Nome:</label>
+					<input type="text" name="nome" value="" id="name" />
 
-				<label class="" for="cognome">cognome:</label>
-				<input type="text" name="cognome" value="" id="surname" />
+					<label class="" for="cognome">cognome:</label>
+					<input type="text" name="cognome" value="" id="surname" />
 
-				<label class="" for="email">Email:</label>
-				<input type="email" name="email" value="" id="email" />
+					<label class="" for="email">Email:</label>
+					<input type="email" name="email" value="" id="email" />
 
-				<label>password</label>
-				<input type="password" name="password" value="" id="password" />
-				<br />
-				<table>
-					<tr>
-						<td>Mostra password</td>
-						<td><input  class="mycheckbox" type="button" onclick="show()" /></td>
-					</tr>
-				</table border=2>
+					<label>password</label>
+					<input type="password" name="password" value="" id="password" />
+					<br />
+					<table>
+						<tr>
+							<td>Mostra password</td>
+							<td><input class="mycheckbox" type="button" onclick="show()" /></td>
+						</tr>
+					</table border=2>
 
-				<br />
-				<label>conferma password</label>
-				<input type="password" name="bassword" value="" id="bassword" />
-				<input type="submit" name="Submit" />
-			</form>
-		</fieldset>
+					<br />
+					<label>conferma password</label>
+					<input type="password" name="bassword" value="" id="bassword" />
+					<input type="submit" name="Submit" />
+				</form>
+			</fieldset>
+		</div>
 	</body>
 </html>
