--- a/front/moduli/qi/quiz_qi/domanda0.html
+++ b/front/moduli/qi/quiz_qi/domanda0.html
@@ -1,14 +1,16 @@
 <!-- @format -->
+
 <div id="domanda1.1">
+	<div class="domanda1" style="padding-left: 60px;">&nbsp;</div>
+	<div class="domanda1" style="padding-left: 60px;">&nbsp;</div>
 	<div class="domanda1" style="padding-left: 60px;">
-		<strong
-			><span class="quiz_num">1.</span
+		<strong><span class="quiz_num">1.</span
 			><span class="quiz"
 				>Quale dei cinque animali &egrave; meno simile agli altri quattro?</span
 			></strong
 		>
 	</div>
-	<div class="domanda1" style="padding-left: 60px;" ">
+	<div class="domanda1" style="padding-left: 60px;" >
 		<input
 			id="domanda_1"
 			class="qmn_quiz_radio"
@@ -54,3 +56,8 @@
 		/><label for="domanda1_5">Tigre</label>
 	</div>
 </div>
+
+
+ 
+
+
